src/test/ui/issues/issue-5997-struct.stderr
error[E0401]: can't use generic parameters from outer function
  --> $DIR/issue-5997-struct.rs:2:14
   |
LL | fn f<T>() -> bool {
   |      - type parameter from outer function
LL |     struct S(T);
   |             -^ use of generic parameter from outer function
   |             |
   |             help: try using a local generic parameter instead: `<T>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0401`.
